# O2hopf

./: .gitignore  O(2)-Hopf Calculator  README.md  app.py  index.html  pyproject.toml
examples/: application_1.py
o2sym/: __init__.py  checks.py  classification.py  conservative.py  core.py  formatting.py  safe_eval.py
tests/: test_o2sym.py
