[project]
name = "o2sym-prototype"
version = "0.2.0"
description = "Prototype O(2)-Hopf normal-form coefficient calculator"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
app = ["streamlit"]
test = ["pytest"]
dev = ["streamlit", "pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
